--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
 *,
 *::before,
 *::after {
-   box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
@@ -58,4 +58,122 @@ button:active {
 }
 
 .todo-app {
+  width: 340px;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 25px 20px;
+  background: var(--color-white);
+  border-radius: var(--border-radius);
+  box-shadow: var(--box-shadow);
+}
+
+.todo-app h1 {
+  font-size: 26px;
+  font-weight: bold;
+}
+
+.todo-app :is(header, footer).horizontal {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 4px;
+}
+
+/**
+ * header
+ */
+.todo-app header {
+  height: 40px;
+}
+
+.todo-app header .add-input {
+  flex: 1;
+  height: 100%;
+  padding: 10px;
+  border: 1px solid var(--color-gray-1);
+  font-size: 16px;
+}
+.todo-app header .add-input::placeholder {
+  color: var(--color-gray-2);
+}
+
+.todo-app header .add-button {
+  width: 40px;
+  height: 100%;
+  background: center / contain no-repeat url("./svg/plus.svg"), var(--color-purple);
+  color: white;
+}
+
+/**
+ * todos
+ */
+.todo-app .todos {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  height: 180px;
+  max-height: 180px;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: var(--color-gray-1);
+}
+.todo-app .todos::-webkit-scrollbar {
+  width: 10px;
+}
+.todo-app .todos::-webkit-scrollbar-track {
+  background-color: var(--color-white);
+}
+.todo-app .todos::-webkit-scrollbar-thumb {
+  border-radius: 6px;
+  border: var(--border-radius) solid var(--color-white);
+  background-color: var(--color-gray-2);
+}
+
+.todo-app .todos .todo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 40px;
+  background-color: var(--color-gray-0);
+  min-width: 0;
+}
+
+.todo-app .todos .todo p {
+  flex: 1;
+  padding: 0 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.todo-app .todos .todo .delete-button {
+  height: 100%;
+  width: 40px;
+  background: center / 1.2em no-repeat url("./svg/delete.svg"), var(--color-red);
+  opacity: 0;
+  will-change: opacity;
+  transition: opacity 0.1s;
+}
+.todo-app .todos .todo:hover .delete-button {
+  opacity: 1;
+}
+
+/**
+ * footer
+ */
+.todo-app footer {
+}
+
+.todo-app footer .remain-tasks {
+  font-size: 16px;
+}
+
+.todo-app footer .clear-button {
+  padding: 8px;
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  color: var(--color-white);
+  background-color: var(--color-purple);
 }
