--- a/styles.css
+++ b/styles.css
@@ -70,32 +70,49 @@ button:active {
   font-size: 26px;
   color: var(--color-black);
   margin-bottom: 20px;
+  padding-top: 10px;
+  padding-left: 10px;
 }
 
 .todo-app input {
   box-sizing: border-box;
   background: var(--color-white);
-  border: 1px solid var(--color-gray-1);
+  border: 1.5px solid var(--color-gray-1);
   padding: 10.75px 11px;
   width: 256px;
   height: 40px;
   align-items: flex-start;
   margin-bottom: 20px;
+  color: var(--color-gray-0);
+  margin-left: 10px;
+}
+
+.todo-app input::placeholder {
+  opacity: 0.5;
+  font-weight: 500;
+}
+
+.todo-app ul {
+  margin-right: 10px;
 }
 
 .todo-app li {
   background: var(--color-gray-0);
   padding: 12px 40px 12px 0px;
   margin-bottom: 10px;
+  padding: 10px;
+  margin-left: 10px;
+  font-weight: 500;
 }
 
 .todo-app footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding:10px;
 }
 
-.todo-app button {
+.clear-all{
   flex-direction: row;
   background: var(--color-purple);
   border-radius: 2px;
@@ -104,3 +121,23 @@ button:active {
   color: var(--color-white);
 }
 
+.plus-box {
+  background: var(--color-purple);
+  border-radius: 2px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  font-size: 40px;
+  color: var(--color-white);
+}
+
+.scroll-bar::-webkit-scrollbar {
+  width: 5.5px;
+  margin-right: 10px;
+}
+
+.scroll-bar::-webkit-scrollbar-thumb {
+  height: 30%;
+  background: var(--color-gray-1);
+  border-radius: 10px;
+}
