--- a/styles.css
+++ b/styles.css
@@ -51,93 +51,109 @@ button:active {
 }
 
 .todo-app {
-  width: 350px;
+  width: 340px;
   max-width: 100%;
-  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 25px 20px;
   background: var(--color-white);
   border-radius: var(--border-radius);
-  box-shadow: 
-    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-    0 12.5px 10px rgba(0, 0, 0, 0.06),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-    0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-    0 100px 80px rgba(0, 0, 0, 0.12);
+  box-shadow: var(--box-shadow);
 }
 
 .todo-app h1 {
-  font-weight: 700;
   font-size: 26px;
-  color: var(--color-black);
-  margin-bottom: 20px;
-  padding-top: 10px;
-  padding-left: 10px;
+  font-weight: bold;
 }
 
-.todo-app input {
-  box-sizing: border-box;
-  background: var(--color-white);
-  border: 1.5px solid var(--color-gray-1);
-  padding: 10.75px 11px;
-  width: 256px;
-  height: 40px;
-  align-items: flex-start;
-  margin-bottom: 20px;
-  color: var(--color-gray-0);
-  margin-left: 10px;
-}
-
-.todo-app input::placeholder {
-  opacity: 0.5;
-  font-weight: 500;
-}
-
-.todo-app ul {
-  margin-right: 10px;
-}
-
-.todo-app li {
-  background: var(--color-gray-0);
-  padding: 12px 40px 12px 0px;
-  margin-bottom: 10px;
-  padding: 10px;
-  margin-left: 10px;
-  font-weight: 500;
-}
-
-.todo-app footer {
+.todo-app :is(header, footer).subtitles-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding:10px;
+  gap: 0.25em;
 }
 
-.clear-all{
-  flex-direction: row;
-  background: var(--color-purple);
-  border-radius: 2px;
-  padding: 8px;
-  letter-spacing: 0.5px;
+/* header */
+
+.todo-app header {
+  height: 2.5em;
+}
+
+.todo-app header .plus-input {
+  flex: 1;
+  height: 100%;
+  padding: 10px;
+  border: 1px solid var(--color-gray-1);
+  font-size: 16px;
+}
+.todo-app header .plus-input::placeholder {
+  color: var(--color-gray-2);
+}
+
+.todo-app header .plus-button {
+  width: 2.5em;
+  height: 100%;
+  background: center / contain no-repeat url("./svg/plus.svg"), var(--color-purple);
+}
+
+/* todo-app-list */
+
+.todo-app .todo-app-list {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  height: 200px;
+  max-height: 200px;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: var(--color-gray-1);
+}
+.todo-app .todo-app-list::-webkit-scrollbar {
+  width: 10px;
+}
+.todo-app .todo-app-list::-webkit-scrollbar-track {
+  background-color: var(--color-white);
+}
+.todo-app .todo-app-list::-webkit-scrollbar-thumb {
+  border-radius: 6px;
+  border: 1px solid var(--color-white);
+  background-color: var(--color-gray-2);
+}
+
+.todo-app .todo-app-list .todo-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 2.5em;
+  background-color: var(--color-gray-0);
+  min-width: 0;
+}
+
+.todo-app .todo-app-list .todo-list p {
+  flex: 1;
+  padding: 0 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.todo-app .todo-app-list .todo-list .delete-button {
+  height: 100%;
+  width: 2.5em;
+  background: center / contain no-repeat url("./svg/delete.svg"), var(--color-red);
+}
+.todo-app .todos .todo:hover .delete-button {
+  opacity: 1;
+}
+
+/* footer */
+
+.todo-app footer .clear-button {
+  padding: 0.5em;
+  font-size: 15px;
+  letter-spacing: 1px;
   color: var(--color-white);
-}
-
-.plus-box {
-  background: var(--color-purple);
-  border-radius: 2px;
-  width: 40px;
-  height: 40px;
-  text-align: center;
-  font-size: 40px;
-  color: var(--color-white);
-}
-
-.scroll-bar::-webkit-scrollbar {
-  width: 5.5px;
-  margin-right: 10px;
-}
-
-.scroll-bar::-webkit-scrollbar-thumb {
-  height: 30%;
-  background: var(--color-gray-1);
-  border-radius: 10px;
+  background-color: var(--color-purple);
+  margin-left: 200px;
 }
